# CG_private_project

./: .gitignore  README.md  imgui.ini  pyproject.toml  video documentation
docs/: ARCHITECTURE.md  FINAL_REPORT.md  PLAN.md  PRD.md  PROMPT_LOG.md  TODO.md  USER_GUIDE.md
src/interactive_graphics_lab/: __init__.py  main.py
src/interactive_graphics_lab/animation/: __init__.py  system.py
src/interactive_graphics_lab/core/: __init__.py  application.py  scene.py
src/interactive_graphics_lab/geometry/: __init__.py  generators.py  mesh.py
src/interactive_graphics_lab/lighting/: __init__.py  lights.py
src/interactive_graphics_lab/materials/: __init__.py  procedural.py
src/interactive_graphics_lab/postprocessing/: __init__.py  effects.py
src/interactive_graphics_lab/rendering/: __init__.py  gpu_mesh.py  renderer.py
src/interactive_graphics_lab/ui/: __init__.py  controller.py
tests/: test_geometry.py  test_materials_postprocessing.py  test_scene_animation.py
