[project]
name = "cg-private-project"
version = "0.1.0"
description = "Interactive desktop graphics demonstrations using a GPU/OpenGL backend."
requires-python = ">=3.11"
dependencies = [
    "imgui>=2.0.0",
    "moderngl>=5.8",
    "moderngl-window>=3.1",
    "pyopengl>=3.1.10",
]

[project.scripts]
interactive-graphics-lab = "interactive_graphics_lab.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
